2016-04-01  Ryan Haddad  <ryanhaddad@apple.com>

        Marking three media controls tests as flaky on El Capitan
        https://bugs.webkit.org/show_bug.cgi?id=156112

        Unreviewed test gardening.

        * platform/mac/TestExpectations:

2016-04-01  Joonghun Park  <jh718.park@samsung.com>

        Unreviewed EFL gardening about new RTL scrollbar testcase
        This testcase has been added in r198859.

        * platform/efl/TestExpectations:
        * platform/efl/fast/scrolling/rtl-scrollbars-animation-property-expected.txt: Added.

2016-03-31  Antti Koivisto  <antti@apple.com>

        Separate render tree updating from style resolve
        https://bugs.webkit.org/show_bug.cgi?id=155298

        Reviewed by Andreas Kling.

        * TestExpectations:

            Skip mathml/presentation/menclose-notation-attribute-change-value.html. It will be fixed by upcoming MathML refactoring.

        * css3/blending/repaint/blend-mode-isolate-stacking-context-expected.txt:
        * css3/viewport-percentage-lengths/viewport-percentage-lengths-resize-expected.txt:

            This is a progression.

        * editing/mac/spelling/autocorrection-contraction-expected.txt:
        * editing/mac/spelling/autocorrection-removing-underline-after-paste-expected.txt:
        * editing/mac/spelling/autocorrection-removing-underline-expected.txt:
        * editing/mac/spelling/autocorrection-simple-expected.txt:
        * editing/style/remove-underline-from-stylesheet-expected.txt:
        * editing/style/typing-style-003-expected.txt:

            Non-rendered whitespace related changes.

        * platform/ios-simulator/TestExpectations:

            Skip fast/regions/position-writing-modes-in-variable-width-regions.html on iOS. Similar tests are mostly already skipped.

        * platform/ios-simulator/editing/style/typing-style-003-expected.txt: Added.
        * platform/mac-wk2/editing/mac/spelling/autocorrection-contraction-expected.txt: